# template

./: .gitignore  README.md  clash.service
Cheatsheet/: vpn.md
Cheatsheet/languages/: API_C.txt  C.txt  arm.md  golang.go  linuxC.md  makefile.md  perl.txt  python_use.md
Cheatsheet/linux/: wifi.md
Cheatsheet/opensource_lib/: neovim.txt  xml2.md
Cheatsheet/tools/: tcpdump.md
XMind/: IPC文件系统定制方案.xmind  mongoose.xmind
cmake_c++/ez_alg/: .config  .editorconfig  CMakeLists.txt  Makefile  build.sh
cmake_c++/ez_alg/cmake/toolchains/: arm-linux-gnu-sv822_glibc_gcc750.cmake  arm-linux-gnu-sv822d_glibc_gcc750.cmake  arm-linux-gnu-sv823c_glibc_gcc750.cmake
cmake_c++/ez_alg/demo/: CMakeLists.txt  t1.c
cmake_c++/ez_alg/depend/sv822_ndk/example/: readme.txt
cmake_c++/ez_alg/depend/sv822_ndk/example/custom-kernel/: Virgo.mk  sample.cpp
cmake_c++/ez_alg/depend/sv822_ndk/example/img-process/: Virgo.mk  img.cpp
cmake_c++/ez_alg/depend/sv822_ndk/example/in-out-raw-data/: Virgo.mk  sample.cpp
cmake_c++/ez_alg/depend/sv822_ndk/example/inference/: Virgo.mk  sample.cpp
cmake_c++/ez_alg/depend/sv822_ndk/example/io-mem-shared/: Virgo.mk  sample.cpp
cmake_c++/ez_alg/depend/sv822_ndk/example/model&&data/: CustomOp.py  data.bgr  mobilenet_v2_quantized.ezb  r18.ezb  test.caffemodel  test.prototxt
cmake_c++/ez_alg/depend/sv822_ndk/example/multi-batch/: Virgo.mk  sample.cpp
cmake_c++/ez_alg/depend/sv822_ndk/include/VX/: vx.h  vx_api.h  vx_compatibility.h  vx_kernels.h  vx_khr_nn.h  vx_nodes.h  vx_types.h
cmake_c++/ez_alg/depend/sv822_ndk/include/VX_EXT/: vx_amd_nn.h  vx_ext_amd.h  vx_log.h
cmake_c++/ez_alg/depend/sv822_ndk/include/libnn/: net_api.h
cmake_c++/ez_alg/inc/: libdet.h
cmake_c++/ez_alg/src/: CMakeLists.txt  libdet.c
cmake_c++/library_template/: CMakeLists.txt
cmake_c++/library_template/sample/: CMakeLists.txt
cmake_c++/library_template/sample/use01/: main.cpp  (+1 more)
cmake_c++/linux/: CMakeLists.txt
cmake_c++/linux/src/: main.c
cmake_c++/linux_c/: CMakeLists.txt  build.sh  cmake-kits.json
cmake_c++/linux_c/cmake/toolchains/: arm-linux-gnu-fh.cmake
cmake_c++/linux_c/docs/: mkdocs.yml
cmake_c++/linux_c/docs/docs/: index.md
cmake_c++/linux_c/src/: CMakeLists.txt  main.c
cmake_c++/linux_c/test/: test.c
cmake_c++/linux_cpp/: .tasks  CMakeLists.txt  build.sh
cmake_c++/linux_cpp/cmake/toolchains/: arm-linux-gnu-fh.cmake  arm-linux-gnu-sv823c_glibc_gcc750.cmake
cmake_c++/linux_cpp/src/: CMakeLists.txt  main.cc
cmake_c++/linux_cpp/test/: CMakeLists.txt
cmake_c++/linux_cpp/tools/cmake/toolchains/: arm-linaro_linux_gnueabihf.cmake
cmake_c++/package_template/: .config  .config.old  .tasks  CMakeLists.txt  Makefile  build.sh  pack.sh
cmake_c++/package_template/src/: CMakeLists.txt
cmake_c++/package_template/test/: CMakeLists.txt
cmake_c++/package_template/tools/: mconf  mkfs.jffs2  mksquashfs  rootconf  unsquashfs
cmake_c++/t1/: CMakeLists.txt  build.sh
cmake_c++/t1/tools/cmake/toolchains/: mips-linux-gnu-t31.cmake
cmake_c++/windows/scripte/: demo_use01.bat
cmake_c++/windows/use01/: CMakeLists.txt  main.cpp
diagram/: kernel.drawio
docs/: Ollama.md  RAG.md  acp_mcp.md  ai_cmp.md  aider.md  audio.md  clash.md  claude_cli.md  claude_cookbook.md  claude_proxy.md  claude_ver.md  dev_env.md  frpc.md  gitnexus.md  isp.md  lazyvim.md  lazyvim_go.md  linux_mem.md  media.md  memwatch.md  openclaw.md  rust.md  sdcard.md  sdcard_test.md  treesitter.md  ts.md  video.md  web_search_tavily.md  yazi.md  zig.md
dotfiles/: install_for_linux.sh
dotfiles/.SpaceVim.d/: init.toml
dotfiles/configs_bak/: .xprofile  .zshrc
dotfiles/configs_bak/.i3/: config
dotfiles/lazygit/: config.yml
dotfiles/mpp/: 计划表设计.mpp
dotfiles/polybar/: config
dotfiles/smb/manjaro/: smb.conf
dotfiles/tmux/: .tmux.conf.local  tmux.conf
dotfiles/vim/: .local.vimrc  vimrc  vimrc_bak
dotfiles/xmake/: gen.sh  xmake.lua
dotfiles/zsh/: zshrc
driver/sample_tcu/: Makefile  t_drv.c  t_drv.h
driver/sample_tcu/test/: Makefile  test.c  test.h
espanso/: linux.yml
lsp/clangd/: .clang-format-t1  compile_commands.json  compile_flags.txt  readme.md
lsp/python/: .flake8
make/: Makefile
make/normal_p1/: .tasks  Makefile
make/normal_p1/inc/: main_api.h
make/normal_p1/src/: main.c
make/normal_p1/toolchains/: toolchain-params.mk
make/t1/: Makefile
mkdocs/proj01/: mkdocs.yml
mkdocs/single_00/: mkdocs.yml
mkdocs/single_00/docs/: index.md
neovim/luarvim/: install.sh
powershell/: Microsoft.PowerShell_profile.ps1
python/: README.md  template.py
python/test_parser/: test01.py
python/yaml/: mk_version.py
shell/: .local.vimrc  aml_strip.sh  curl_crosscompile.sh  gdb_crosscompile.sh  gdb_crosscompile_jz.sh  git_gen_diff_dir_workspace.sh  install.sh  iperf_crosscompile_jz.sh  linux_env.sh  make.sh  makefile  nginx_crosscompile.sh  openssl_crosscompile.sh  openssl_crosscompile_jz.sh  openssl_crosscompile_jz_v2.sh  readme.md  sysstat_build.sh  tcpdump_crosscompile.sh  test_tc.sh
shell/auto/: configure  define  feature  have  have_headers  headers  include  init  options
shell/clang_replace_e600/: clang_format.sh
shell/clang_replace_ez/: clang_format.sh
shell/clang_replace_jz/: clang_format.sh
shell/ctags_struct/: Makefile
shell/objs/: autoconf.err  hgh_auto_config.h
shell/sed_test/: sed_test.sh
shell/sed_test/txt/: test
shell/str_cut/: route_done.sh
shell/util_test/: Makefile  boards.cfg  test
system_service/system/: clash.service  frpc.service  nginx.service
teedocs/: site_config.json
teedocs/api/: README.md  api_mpp.md  config.json  sidebar.yaml
teedocs/api/inner/: api_ui_lvgl.md
teedocs/api/p/: msg_app.md
teedocs/base/: README.md  faq.md  func.md  sidebar.yaml  todo.md
teedocs/base/peripheral_device/: gpio.md
teedocs/config/: config.json
teedocs/pages/index/: README.md
teedocs/static/css/: custom.css
vimscript/: t01.vim
visio/: gh.vsdx
xmake_cross/: xmake.lua
xmake_cross/toolchains/: mips-linux-gnu.lua
xmake_demo/: gen.sh  xmake.lua
xmake_demo/demo/: xmake.lua
xmake_demo/demo/async/: xmake.lua
(+29 files in other folders)
